# minecraft-bedrock-schemas-rs

./: (build.rs  .env  .gitignore  .gitmodules  Cargo.toml  Readme.md  build.old.rs  build.rs  gen_components.ts  gen_mod.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: lib.rs  main.rs  pack.rs  test_utils.rs  types.rs  utils.rs
src/behavior/: animation.rs  block.rs  dialogue.rs  item.rs  mod.rs
src/behavior/animation_controllers/: animation_controller.rs  animation_controllers.rs  mod.rs
src/behavior/animations/: animations.rs
src/behavior/biome/: biome.rs  mod.rs  tag.rs
src/behavior/biome/components/: capped_surface.rs  climate.rs  consolidated_features.rs  forced_features.rs  frozen_ocean_surface.rs  ignore_automatic_features.rs  legacy_world_generation_rules.rs  mesa_surface.rs  mod.rs  mountain_parameters.rs  multinoise_generation_rule.rs  nether_generation_rules.rs  nether_surface.rs  overworld_generation_rules.rs  overworld_height.rs  surface_material_adjustments.rs  surface_parameters.rs  swamp_surface.rs  the_end_surface.rs
src/behavior/dialogue/: dialogue.rs  mod.rs
src/behavior/entities/: entity.rs  event.rs  mod.rs
src/command/: mod.rs
src/general/: format_version.rs  identifier.rs  mod.rs  rawtext.rs  selection.rs  types.rs  version.rs
src/general/identifier/: animation.rs  animation_controller.rs  mod.rs  namespace.rs
src/molang/: mod.rs  molang.rs
src/resource/: animation_controllers.rs  animations.rs  fog.rs  mod.rs
src/resource/fog/: mod.rs
src/shared/: animation_controllers.rs  mod.rs
src/slash_command/: mod.rs
(+431 files in other folders)
