[package]
name = "minecraft-bedrock-schemas"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
name = "minecraft_bedrock_schemas"
path = "src/lib.rs"




[dependencies]
regex = "1.7.1"
regexp = "0.3.2"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
walkdir = "2.3.2"

#[build-dependencies]
#serde = "1.0.152"
#serde_json = "1.0.93"
#typify = {path = "./typify/typify"}
#schemars = "0.8.11"
