[package]
name = "minecraft-bedrock-schemas"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
name = "minecraft_bedrock_schemas"
path = "src/lib.rs"




[dependencies]
jsonschema = "0.17.0"
schemars = { version = "0.8.12", features = ["rust_decimal","chrono", "uuid08", "smallvec"] }
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.93"
syn = { version = "2.0.11", features = ["full"] }

#[build-dependencies]
#serde = "1.0.152"
#serde_json = "1.0.93"
#typify = {path = "./typify/typify"}
#schemars = "0.8.11"
